fix: css and gap for Input

--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -1,9 +1,9 @@
 .InputWrapper {
   display: flex;
   align-items: center;
-  border-radius: 48px;
   padding: 8px 16px;
-  border: 2px solid var(--icon-color);
+  border-radius: 0.3125rem;
+  border: 1px solid var(--color-grey-grey-6);
   width: 100%;
 }
 
@@ -34,9 +34,11 @@
 .focused {
   border: 2px solid var(--accent-color);
 
+
   .addonLeft svg, .addonRight svg {
     color: var(--accent-color);
   }
+
 }
 
 .input {
@@ -54,4 +56,8 @@
 
 .readonly {
   opacity: 0.7;
+}
+
+.focused_label {
+  color: var(--color-grey-grey-3);
 }
